--- a/src/app/admin/layout/components/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/components/sidebar/sidebar.component.html
@@ -1,20 +1,10 @@
-<ul>
-  <li>
-    <a routerLink="/admin">Dashboard</a>
-  </li>
-  <li>
-    <a routerLink="customers">Customers</a>
-  </li>
-  <li>
-    <a routerLink="products">Products</a>
-  </li>
-  <li>
-    <a routerLink="orders">Orders</a>
-  </li>
-  <li>
-    <a routerLink="">Siteyi Gor</a>
-  </li>
-</ul>
+<mat-list role="list">
+  <mat-list-item role="listitem"><a routerLink="/admin">Dashboard</a></mat-list-item>
+  <mat-list-item role="listitem"><a routerLink="customers">Customers</a></mat-list-item>
+  <mat-list-item role="listitem"><a routerLink="products">Products</a></mat-list-item>
+  <mat-list-item role="listitem"><a routerLink="orders">Orders</a></mat-list-item>
+  <mat-list-item role="listitem"><a routerLink="">Siteyi Gor</a></mat-list-item>
+</mat-list>
 
-<router-outlet></router-outlet>
+
     
