ngx spinner added and customized in base component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,3 +63,7 @@
   </nav>
   <router-outlet></router-outlet>
 </div>
+
+<ngx-spinner name="s1" type="ball-newton-cradle"></ngx-spinner>
+<ngx-spinner name="s2" type="ball-zig-zag"></ngx-spinner>
+<ngx-spinner name="s3" type="cog"></ngx-spinner>
